--- a/index.html
+++ b/index.html
@@ -4,179 +4,179 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello</title>
+    <title>Checkout example</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./bootstrap-logo.svg">
 </head>
 <body>
-    <main>
-        <div class="container">
-            <div class="div-container">
+    <div class="container">
+        <main>
+            <div class="checkout-inf">
+                <figure>
+                    <img src="./bootstrap-logo.svg" alt="">
+                </figure>
                 <h2>Checkout form</h2>
                 <p>Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
             </div>
-        </div>
-        <div class="main-form-container">
-            <div class="form-container">
-                <h2>Billing address</h2>
+            <div class="container-data-form">
+                <div class="aside-inf">
+                    <div class="numer-aside1">
+                        <h2>Your chart</h2>
+                        <div class="number-aside">3</div>
+                    </div>
+                    <ul>
+                        <li class="body-aside">
+                            <div>
+                                <h6>Product name</h6>
+                                <small>Brief description</small>
+                            </div>
+                            <span>$12</span>
+                        </li>
+                        <li class="body-aside">
+                            <div>
+                                <h6>Second product</h6>
+                                <small>Brief description</small>
+                            </div>
+                            <span>$8</span>
+                        </li>
+                        <li class="body-aside">
+                            <div>
+                                <h6>Third item</h6>
+                                <small>Brief description</small>
+                            </div>
+                            <span>$5</span>
+                        </li>
+                        <li class="body-aside h6-aside">
+                            <div>
+                                <h6>Pormo code</h6>
+                                <small>EXAMPLECODE</small>
+                            </div>
+                            <span>-$5</span>
+                        </li>
+                        <li class="body-aside last-span">
+                            <div>
+                                Total <small>USD</small>
+                            </div>
+                            <span><strong>$20</strong></span>
+                        </li>
+                    </ul><br>
+                    <div class="promo-code">
+                        <input type="text" placeholder="Promo code">
+                        <button type="submit">Redeem</button>
+                    </div>
+                </div>
                 <form action="">
-                    <div class="input-form-container">
-                        <div class="input-form">
-                            <label for="name" class="label-form">First name</label><br>
-                            <input type="text" id="name" name="name" autocomplete="name" required>
+                    <h2>Billing address</h2>
+                    <div class="data-form">
+                        <div class="name-input-form">
+                            <label for="name-input">First name</label><br>
+                            <input type="text" name="" id="name-input" autocomplete="name" required>
                         </div>
-                        <div class="input-form">
-                            <label for="lastName" class="label-form">Last name</label><br>
-                            <input type="text" id="lastName" autocomplete="name" required>
+                        <div class="name-input-form">
+                            <label for="last-input">Last name</label><br>
+                            <input type="text" name="" id="last-input" required>
                         </div>
-                        <div class="input-form email-input">
-                            <label for="userName" class="label-form">User name</label><br>
-                            <input type="email" id="userName" required>
+                        <div class="block-input">
+                            <label for="user-name">User name</label>
+                            <div class="user-name-div">
+                                <span class="span-user">@</span><input type="text" id="user-name" required placeholder="Username">
+                            </div>
                         </div>
-                        <div class="input-form email-input">
-                            <label for="email" class="label-form">Email <small>Optional</small></label><br>
-                            <input type="email" id="lastName" autocomplete="email">
+                        <div class="block-input email-input">
+                            <label for="email-input">Email</label> <span>(Optional)</span><br>
+                            <input type="email" name="" id="email-input" autocomplete="email" placeholder="you@example.com"> 
                         </div>
-                        <div class="input-form email-input">
-                            <label for="address" class="label-form">Address</label><br>
-                            <input type="text" id="address" required>
+                        <div class="block-input email-input">
+                            <label for="email-input">Address</label><br>
+                            <input type="email" name="" id="email-input" placeholder="1234 Main St"> 
                         </div>
-                        <div class="input-form email-input">
-                            <label for="address2" class="label-form">Address 2 <small>Optional</small></label><br>
-                            <input type="text" id="address2" >
+                        <div class="block-input email-input">
+                            <label for="email-input">Address 2</label> <span>(Optional)</span><br>
+                            <input type="email" name="" id="email-input" placeholder="Apartment or Suite"> 
                         </div>
-                        <div class="input-form list-form country">
-                            <label for="countries" class="label-form">Contry</label><br>
-                            <input list="countries" name="countries" id="countries">
+                        <div class="selection-list country-list">
+                            <label for="country">Country</label><br>
+                            <input list="countries" placeholder="Choose...">
                             <datalist id="countries">
                                 <option value="Colombia"></option>
                                 <option value="A tu corazon"></option>
                                 <option value="EEUU"></option>
                             </datalist>
                         </div>
-                        <div class="input-form list-form">
-                            <label for="state" class="label-form">State</label><br>
-                            <input list="state" id="state">
-                            <datalist id="state">
-                                <option value="Colombia"></option>
-                                <option value="A tu corazon"></option>
-                                <option value="EEUU"></option>
+                        <div class="selection-list state-list">
+                            <label for="states">State</label><br>
+                            <input list="states" placeholder="Choose...">
+                            <datalist id="states">
+                                <option value="California"></option>
+                                <option value="Miami 8)"></option>
                             </datalist>
                         </div>
-                        <div class="input-form list-form">
-                            <label for="zip" class="label-form">Zip</label><br>
-                            <input type="text" id="zip" name="zip" required>
+                        <div class="selection-list">
+                            <label for="zip">Zip</label><br>
+                            <input type="text" name="" id="zip">
                         </div>
-                    </div><br>
+                    </div>
                     <hr>
+                    <div class="selection-form">
+                        <input type="checkbox" name="option-e" id="same-address">
+                        <label for="same-address">Shipping address is the same as my billing address</label>
+                    </div>
+                    <div class="selection-form">
+                        <input type="checkbox" name="option-e" id="save-information">
+                        <label for="save-information">Save this information for next time</label>
+                    </div>
+                    <hr>
+                    <h4>Payment</h4>
                     <div>
-                        <div class="selection-form">
-                            <input type="checkbox" name="option-e" id="same-address">
-                            <label for="same-address">Shipping address is the same as my billing address</label>
+                        <div class="type-payment">
+                            <input type="radio" name="payment" id="credit" required>
+                            <label for="credit">Credit card</label>
                         </div>
-                        <div class="selection-form">
-                            <input type="checkbox" name="option-e" id="save-information">
-                            <label for="save-information">Save this information for next time</label>
+                        <div class="type-payment">
+                            <input type="radio" name="payment" id="debit" required>
+                            <label for="debit">Debit card</label>
                         </div>
-                    </div>
-                    <hr>
-                    <div>
-                        <h2>Payment</h2>
-                        <div>
-                            <div>
-                                <input type="radio" name="payment" id="credit" required>
-                                <label for="credit">Credit card</label>
-                            </div>
-                            <div>
-                                <input type="radio" name="payment" id="debit" required>
-                                <label for="debit">Debit card</label>
-                            </div>
-                            <div>
-                                <input type="radio" name="payment" id="paypal" required>
-                                <label for="paypal">Paypal</label>
-                            </div>
+                        <div class="type-payment">
+                            <input type="radio" name="payment" id="paypal" required>
+                            <label for="paypal">Paypal</label>
                         </div>
                     </div>
-                    <div class="input-form-container">
-                        <div class="input-form">
-                            <label for="nameCard" class="label-form">Name on card</label><br>
-                            <input type="text" id="nameCard" name="nameCard" required>
+                    <div class="pay-type">
+                        <div class="inf-card">
+                            <label for="name-card">Name on card</label><br>
+                            <input type="text" name="" id="name-card">
+                            <small>Full name as displayed on card</small>
                         </div>
-                        <div class="input-form">
-                            <label for="creditCard" class="label-form">Credit card number</label><br>
-                            <input type="text" id="creditCard" name="crediCard" required>
+                        <div class="inf-card">
+                            <label for="credit-card">Credit card number</label><br>
+                            <input type="text" name="" id="credit-card">
                         </div>
-                        <div class="credit-inf">
-                            <div class="input-form credit-inf-input">
-                                <label for="expiration" class="label-form">Expiration</label><br>
-                                <input type="text" id="exppiration" name="expiration" required>
+                        <div class="small-type-class">
+                            <div class="inf-card small-type">
+                                <label for="credit-card">Expiration</label><br>
+                                <input type="text" name="" id="credit-card">
                             </div>
-                            <div class="input-form credit-inf-input">
-                                <label for="cvv" class="label-form">CVV</label><br>
-                                <input type="text" id="cvv" name="cvv" required>
+                            <div class="inf-card small-type">
+                                <label for="credit-card">CVV</label><br>
+                                <input type="text" name="" id="credit-card">
                             </div>
                         </div>
                     </div>
                     <hr>
-                    <div class="input-submit-form"> 
+                    <div class="submit-button">
                         <button type="submit">Continue to checkout</button>
                     </div>
                 </form>
             </div>
-            <div class="aside-container">
-                <div class="numer-aside1">
-                    <h2>Your chart</h2>
-                    <div class="number-aside">3</div>
-                </div>
-                <ul>
-                    <li class="body-aside">
-                        <div>
-                            <h6>Product name</h6>
-                            <small>Brief description</small>
-                        </div>
-                        <span>$12</span>
-                    </li>
-                    <li class="body-aside">
-                        <div>
-                            <h6>Second product</h6>
-                            <small>Brief description</small>
-                        </div>
-                        <span>$8</span>
-                    </li>
-                    <li class="body-aside">
-                        <div>
-                            <h6>Third item</h6>
-                            <small>Brief description</small>
-                        </div>
-                        <span>$5</span>
-                    </li>
-                    <li class="body-aside h6-aside">
-                        <div>
-                            <h6>Pormo code</h6>
-                            <small>EXAMPLECODE</small>
-                        </div>
-                        <span>-$5</span>
-                    </li>
-                    <li class="body-aside">
-                        <div>
-                            Total <small>USD</small>
-                        </div>
-                        <span><strong>$20</strong></span>
-                    </li>
-                </ul><br>
-                <div class="promo-code">
-                    <input type="text">
-                    <button type="submit">Redeem</button>
-                </div>
-            </div>
-        </div>
-    </main>
+        </main>
+    </div>
     <footer>
-        <div class="footer">
+        <div class="footer-div">
             <p>© 2017–2021 Company Name</p>
             <ul>
-                <li><a href="#">Company</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Terms</a></li>
                 <li><a href="#">Support</a></li>
-                <li><a href="#">About us</a></li>
             </ul>
         </div>
     </footer>
