--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <label for="last-input">Last name</label><br>
                             <input type="text" name="" id="last-input" required>
                         </div>
-                        <div class="block-input">
+                        <div class="block-input user-name-container">
                             <label for="user-name">User name</label>
                             <div class="user-name-div">
                                 <span class="span-user">@</span><input type="text" id="user-name" required placeholder="Username">
